# jang-tasks

./: .gitignore
.github/workflows/: api.yml
services/tasks_api/: pyproject.toml  serverless.yml  tests.py
